# talker_repo_cpp

./: CMakeLists.txt  README.md  package.xml
include/: Prod.h  busy_loop.h
launch/: prod.launch  prod_cons_trace.json  producer.launch  talker.launch  traces_script.sh
polygraph_infra/: Prod_infra.cpp  polygraph_trace.h  start_prod_cons_node.cpp
src/: producer.cpp  talker.cpp
user_code/: Prod_user.cpp
